# ctrl-solar

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yaml  forecast.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: publish-image.yml
ctrlsolar/: __init__.py  __main__.py  app.py  cli.py  config.py  defaults.yaml  functions.py  localization.py  loop.py  utils.py
ctrlsolar/abstracts/: __init__.py  battery.py  forecast.py  inverter.py  io.py  panels.py  weather.py
ctrlsolar/assembly/: __init__.py  batteries.py  controllers.py  inverters.py  registries.py  runtime.py  sensors.py
ctrlsolar/battery/: __init__.py  abstract.py  battery.py  noah2000.py
ctrlsolar/calibration/: __init__.py  abstract.py  runner.py
ctrlsolar/config/: __init__.py  defaults.yaml  loader.py  models.py
ctrlsolar/controller/: __init__.py  abstract.py  battery.py  consumption.py  energy.py  forecast.py  monitor.py  notes.md  power.py  schedule.py  weather.py
ctrlsolar/inverter/: __init__.py  deye.py  inverter.py
ctrlsolar/io/: __init__.py  filters.py  io.py  mqtt.py
ctrlsolar/mqtt/: __init__.py  abstract.py  library.py  mqtt.py  topics.py
ctrlsolar/panels/: __init__.py  abstract.py  forecast.py  panels.py  weather.py
example/: README.md  config.yaml  docker-compose.yaml
examples/: README.md  config.yaml  docker-compose.yaml  forecast.py
outputs/2026-03-23/22-12-28/.hydra/: config.yaml  hydra.yaml
outputs/2026-03-23/22-27-23/.hydra/: config.yaml  hydra.yaml
tests/: test_cli.py  test_config.py  test_runtime.py
(+22 files in other folders)
