[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ctrlsolar"
version = "0.5.0"
description = "Monitoring and control framework for solar installations."
requires-python = ">=3.11"
dependencies = [
  "paho-mqtt",
  "rich",
  "requests",
  "pandas",
  "pvlib",
  "hydra-core",
]

[project.scripts]
ctrlsolar = "ctrlsolar.app:run"

[tool.setuptools.package-data]
ctrlsolar = ["defaults.yaml"]
